# ghostty-bridge

./: AGENT_CONTEXT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: hook-based-messaging.md
layouts/: ai-trio.toml
skills/ghostty-bridge/: SKILL.md
skills/ghostty-bridge/references/: ghostty-bridge.md
src/: applescript.rs  labels.rs  main.rs
