[package]
name = "ghostty-bridge"
version = "0.4.0"
edition = "2024"
description = "CLI for AI agents to communicate across Ghostty terminal panes via AppleScript"
license = "MIT"
repository = "https://github.com/est7/ghostty-bridge"
authors = ["est7"]
readme = "README.md"
keywords = ["ghostty", "terminal", "cli", "ai", "agent"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
